<resources>
    <string name="app_name">Currency Converter</string>
    <string name="action_settings">Settings</string>
    <string name="basecurrency">Set Base Currency</string>
    <string name="dollar">USD- US Dollar</string>
    <string name="euro">EUR- European Euro</string>
    <string name="pound">GBP- British Pound</string>
    <string name="canadian">CAD- Canadian Dollar</string>
    <string name="australian">AUD- Australian Dollar</string>
    <string name="indian">INR- Indian Rupee</string>
    <string name="convertor">Convertor</string>
    <string name="currency">Currency</string>
    <string name="amount">Enter Amount</string>
    <string name="oneday">1d</string>
    <string name="fiveday">5d</string>
    <string name="threemonth">3m</string>
    <string name="sixmonth">6m</string>
    <string name="oneyear">1y</string>
    <string name="twoyear">2y</string>
    <string name="fiveyear">5y</string>
    <string-array name="spinnerone_name">
        <item>USD</item>
        <item>INR</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>AUD</item>
        <item>AFN</item>
        <item>AFA</item>
        <item>ALL</item>
        <item>DZD</item>
        <item>ADF</item>
        <item>ADP</item>
        <item>AOA</item>
        <item>AON</item>
        <item>ARS</item>
        <item>AMD</item>
        <item>AWG</item>
        <item>AUD</item>
        <item>ATS</item>
        <item>AZN</item>
        <item>AZM</item>
        <item>BSD</item>
        <item>BHD</item>
        <item>BDT</item>
        <item>BBD</item>
        <item>BYR</item>
        <item>BEF</item>
        <item>BZD</item>
        <item>BMD</item>
        <item>BTN</item>
        <item>BTC</item>
        <item>BOB</item>
        <item>BAM</item>
        <item>BWP</item>
        <item>BRL</item>
        <item>GBP</item>
        <item>BND</item>
        <item>BGN</item>
        <item>BGL</item>
        <item>BIF</item>
        <item>KHR</item>
        <item>CVE</item>
        <item>KYD</item>
        <item>XOF</item>
        <item>XAF</item>
        <item>XPF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>KMF</item>
        <item>CDF</item>
        <item>CRC</item>
        <item>HRK</item>
        <item>CUC</item>
        <item>CUP</item>
        <item>CYP</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>DJF</item>
        <item>DOP</item>
        <item>NLG</item>
        <item>XCD</item>
        <item>XEU</item>
        <item>ECS</item>
        <item>EGP</item>
        <item>SVC</item>
        <item>ERN</item>
        <item>EEK</item>
        <item>ETB</item>
        <item>FKP</item>
        <item>FJD</item>
        <item>FIM</item>
        <item>FRF</item>
        <item>GMD</item>
        <item>GEL</item>
        <item>DEM</item>
        <item>GHC</item>
        <item>GHS</item>
        <item>GIP</item>
        <item>XAU</item>
        <item>GRD</item>
        <item>GTQ</item>
        <item>GNF</item>
        <item>GYD</item>
        <item>HTG</item>
        <item>HNL</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>ISK</item>
        <item>IDR</item>
        <item>IRR</item>
        <item>IQD</item>
        <item>IEP</item>
        <item>ILS</item>
        <item>ITL</item>
        <item>JMD</item>
        <item>JPY</item>
        <item>JOD</item>
        <item>KZT</item>
        <item>KES</item>
        <item>KWD</item>
        <item>KGS</item>
        <item>LAK</item>
        <item>LVL</item>
        <item>LBP</item>
        <item>LSL</item>
        <item>LRD</item>
        <item>LYD</item>
        <item>LTL</item>
        <item>LUF</item>
        <item>MOP</item>
        <item>MKD</item>
        <item>MGA</item>
        <item>MGF</item>
        <item>MWK</item>
        <item>MYR</item>
        <item>MVR</item>
        <item>MTL</item>
        <item>MRO</item>
        <item>MUR</item>
        <item>MXN</item>
        <item>MDL</item>
        <item>MNT</item>
        <item>MAD</item>
        <item>MZN</item>
        <item>MMK</item>
        <item>NAD</item>
        <item>NPR</item>
        <item>NZD</item>
        <item>NIO</item>
        <item>NGN</item>
        <item>ANG</item>
        <item>KPW</item>
        <item>NOK</item>
        <item>OMR</item>
        <item>PKR</item>
        <item>XPD</item>
        <item>PAB</item>
        <item>PGK</item>
        <item>PYG</item>
        <item>PEN</item>
        <item>PHP</item>
        <item>XPT</item>
        <item>PLN</item>
        <item>PTE</item>
        <item>QAR</item>
        <item>ROL</item>
        <item>RON</item>
        <item>RUB</item>
        <item>RWF</item>
        <item>WST</item>
        <item>STD</item>
        <item>SAR</item>
        <item>RSD</item>
        <item>SCR</item>
        <item>SLL</item>
        <item>XAG</item>
        <item>SGD</item>
        <item>SKK</item>
        <item>SIT</item>
        <item>SBD</item>
        <item>SOS</item>
        <item>ZAR</item>
        <item>KRW</item>
        <item>ESP</item>
        <item>LKR</item>
        <item>SHP</item>
        <item>SDD</item>
        <item>SDP</item>
        <item>SDG</item>
        <item>SRD</item>
        <item>SRG</item>
        <item>SZL</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>SYP</item>
        <item>TWD</item>
        <item>TJS</item>
        <item>THB</item>
        <item>TOP</item>
        <item>TTD</item>
        <item>TND</item>
        <item>TRY</item>
        <item>TRL</item>
        <item>TMM</item>
        <item>TMT</item>
        <item>UGX</item>
        <item>UAH</item>
        <item>UYU</item>
        <item>AED</item>
        <item>UZS</item>
        <item>VUV</item>
        <item>VEF</item>
        <item>VEB</item>
        <item>VND</item>
        <item>YER</item>
        <item>YUN</item>
        <item>ZMK</item>
        <item>ZWD</item>
    </string-array>
    <string name="pref_offline_mode">Offline Mode</string>
    <string name="pref_offline_mode_summary">Convert Currency in offline</string>
    <string name="pref_Ad_Settings">Remove Ads</string>
    <string name="pref_Theme">Appearance Setting</string>
    <string name="pref_online_setting">Online Settings</string>
    <string name="pref_theme_summary">Set the theme</string>
    <string name="pref_Theme_title">Theme</string>
</resources>